force-app/main/default/objects/Driver__c/fields/Add_Driver_to_Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Add_Driver_to_Insurance_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Driver to Insurance Policy</label>
    <type>Checkbox</type>
</CustomField>