force-app/main/default/objects/Driver__c/fields/Cash_Handling_Training__c.field-meta.xml
<CustomField>
    <fullName>Cash_Handling_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Handling Training</label>
    <type>Checkbox</type>
</CustomField>