force-app/main/default/objects/Driver__c/fields/De_select_Driver_Active_in_SFDC__c.field-meta.xml
<CustomField>
    <fullName>De_select_Driver_Active_in_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>De-select Driver &quot;Active&quot; in SFDC</label>
    <type>Checkbox</type>
</CustomField>