force-app/main/default/objects/Driver__c/fields/DL_Class__c.field-meta.xml
<CustomField>
    <fullName>DL_Class__c</fullName>
    <label>DL Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>