force-app/main/default/objects/Driver__c/fields/Driver_s_License__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver&apos;s License</label>
    <type>Checkbox</type>
</CustomField>