force-app/main/default/objects/Driver__c/fields/Employer_Pull_Notice_EPN__c.field-meta.xml
<CustomField>
    <fullName>Employer_Pull_Notice_EPN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer Pull Notice (EPN)</label>
    <type>Checkbox</type>
</CustomField>