force-app/main/default/objects/Driver__c/fields/File_termination_of_employment_notice_in__c.field-meta.xml
<CustomField>
    <fullName>File_termination_of_employment_notice_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File termination of employment notice in</label>
    <type>Checkbox</type>
</CustomField>