force-app/main/default/objects/Driver__c/fields/Intiate_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Intiate_Off_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intiate Off Date</label>
    <type>Checkbox</type>
</CustomField>