force-app/main/default/objects/Driver__c/fields/Licence_Expired__c.field-meta.xml
<CustomField>
    <fullName>Licence_Expired__c</fullName>
    <formula>Expiration_Date__c &lt; Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licence Expired?</label>
    <type>Checkbox</type>
</CustomField>