force-app/main/default/objects/Driver__c/fields/Medical_Examiner_s_Certificate_MEC__c.field-meta.xml
<CustomField>
    <fullName>Medical_Examiner_s_Certificate_MEC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Examiner’s Certificate (MEC)</label>
    <type>Checkbox</type>
</CustomField>