force-app/main/default/objects/Driver__c/fields/MVR_Abstract__c.field-meta.xml
<CustomField>
    <fullName>MVR_Abstract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MVR Abstract</label>
    <type>Checkbox</type>
</CustomField>