force-app/main/default/objects/Driver__c/fields/Notified_Before_N1_Days_License_Expire__c.field-meta.xml
<CustomField>
    <fullName>Notified_Before_N1_Days_License_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified Before N1 Days License Expire</label>
    <type>Checkbox</type>
</CustomField>