force-app/main/default/objects/Driver__c/fields/Report_departure_to_ABD_for_insurance__c.field-meta.xml
<CustomField>
    <fullName>Report_departure_to_ABD_for_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report departure to ABD for insurance</label>
    <type>Checkbox</type>
</CustomField>