force-app/main/default/objects/Driver__c/fields/RIde_a_long_with_Driver_Specialist__c.field-meta.xml
<CustomField>
    <fullName>RIde_a_long_with_Driver_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RIde-a-long with Driver Specialist</label>
    <type>Checkbox</type>
</CustomField>