force-app/main/default/objects/Driver__c/fields/Safety_Rides__c.field-meta.xml
<CustomField>
    <fullName>Safety_Rides__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Rides</label>
    <type>Checkbox</type>
</CustomField>